# tree-sitter-c

./: Cargo.toml
bindings/rust/: build.rs  lib.rs
