[package]
name = "tree-sitter-c"
description = "C grammar for the tree-sitter parsing library"
version = "0.20.2"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "c"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-c"
edition = "2018"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[features]
default = ["tree-sitter-standard"]
tree-sitter-standard = ["dep:tree-sitter-standard"]
tree-sitter-c2rust = ["dep:tree-sitter-c2rust", "dep:tree-sitter-wasm-build-tool"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-standard = { package = "tree-sitter", version = "0.20", optional = true }
tree-sitter-c2rust = { version = "0.20", optional = true }

[build-dependencies]
cc = "1.0"
tree-sitter-wasm-build-tool = { version = "0.1.0", optional = true }
